@@ -1,195 +1,126 @@
-# JVM
-
-5. JVM
-Q13: JVM 内存结构？
-
-答案: 包括程序计数器、虚拟机栈、本地方法栈、堆、方法区（JDK 8 后为元空间）。堆存储对象，方法区存储类信息、常量池。
-扩展: 元空间和永久代的区别？（元空间使用本地内存，动态扩展）
-Q14: 垃圾回收机制？
-
-答案: GC 回收堆中无引用对象，常用算法有标记-清除、标记-整理、复制算法。常见收集器：CMS、G1（分代收集，关注低延迟）。
-扩展: GC 调优参数？（-Xms、-Xmx、-XX:+UseG1GC）
-Q15: 类加载过程？
-
-答案: 加载 → 连接（验证、准备、解析） → 初始化。双亲委派模型确保类加载安全。
-扩展: 如何打破双亲委派？（自定义 ClassLoader，重写 loadClass）
-
-
-JVM 调优是 Java Web 后台开发中提升系统性能、解决内存问题的重要手段，特别是在高并发场景下。以下是对 JVM 调优常见操作的详细讲解，涵盖核心概念、调优目标、常见参数、工具和实践，内容精炼且针对面试高频点。如果你需要具体代码示例、某个参数的深入分析或项目案例，请告诉我！
-
+---
+title: JVM 内存与 GC
+order: 11
 ---
 
-### 一、JVM 调优的目标
-JVM 调优的主要目标是优化性能、降低延迟、提高吞吐量，具体包括：
-1. **减少 Full GC 频率和耗时**：避免频繁或长时间的 GC 导致系统停顿。
-2. **优化内存分配**：合理分配堆内存，避免内存溢出（OOM）或浪费。
-3. **提高吞吐量**：提升系统处理请求的能力（如 TPS/QPS）。
-4. **降低延迟**：减少响应时间，优化用户体验。
-5. **解决特定问题**：如内存泄漏、线程阻塞、CPU 过高。
+# JVM 内存与 GC
 
----
+JVM 内存管理和垃圾回收是 Java 性能优化的核心。理解 JVM 的内存结构、GC 算法、GC 调优，有助于解决内存泄漏、GC 停顿、性能瓶颈。
 
-### 二、JVM 内存结构回顾
-JVM 调优主要针对堆和非堆内存：
-- **堆内存**：存储对象实例，分为新生代（Eden、Survivor）和老年代。
-- **非堆内存**：
-  - 方法区（JDK 8 后为元空间）：存储类信息、常量池。
-  - 栈：线程栈、程序计数器。
-  - 直接内存：NIO 使用，需单独调优。
-- **垃圾回收器**：如 CMS、G1，调优时需根据收集器特性调整。
+## JVM 内存结构
 
----
+### 程序计数器（Program Counter）
 
-### 三、JVM 调优的常见操作
-#### 1. 调整堆内存大小
-- **参数**：
-  - `-Xms`：初始堆大小，建议与 `-Xmx` 设置相同，避免动态调整。
-  - `-Xmx`：最大堆大小，建议为物理内存的 1/4 至 1/2。
-  - `-XX:NewRatio`：老年代与新生代的比例（如 2 表示老年代是新生代的 2 倍）。
-  - `-XX:SurvivorRatio`：Eden 与 Survivor 区比例（如 8 表示 Eden 是 Survivor 的 8 倍）。
-- **操作**：
-  - 根据业务规模设置堆大小，如高并发系统设 `-Xms4g -Xmx4g`。
-  - 调整新生代比例，减少 Minor GC 频率，例：`-XX:NewRatio=2`。
-- **示例**：
-  ```bash
-  java -Xms4g -Xmx4g -XX:NewRatio=2 -jar app.jar
-  ```
+程序计数器是当前线程执行的字节码指令的行号指示器。字节码解释器通过改变程序计数器的值来选择下一条指令。程序计数器是线程私有的，每个线程都有独立的程序计数器。
 
-#### 2. 选择合适的垃圾收集器
-- **常见收集器**：
-  - **CMS（Concurrent Mark Sweep）**：低停顿，适合低延迟场景，但碎片较多。
-  - **G1（Garbage First）**：兼顾吞吐量和低延迟，适合大堆（>4GB），JDK 9+ 默认。
-  - **ZGC/Shenandoah**：超低延迟，适合超大堆（JDK 11+）。
-- **操作**：
-  - 高吞吐量场景：使用 `-XX:+UseParallelGC`（并行收集器）。
-  - 低延迟场景：使用 `-XX:+UseG1GC` 或 `-XX:+UseZGC`。
-  - CMS 优化：调整 `-XX:CMSInitiatingOccupancyFraction`（如 70）控制老年代回收触发。
-- **示例**：
-  ```bash
-  java -XX:+UseG1GC -Xmx8g -jar app.jar
-  ```
+### Java 虚拟机栈（Java Virtual Machine Stack）
 
-#### 3. 优化 GC 频率和耗时
-- **参数**：
-  - `-XX:MaxGCPauseMillis`：设置 G1 的最大停顿时间（如 200ms）。
-  - `-XX:GCTimeRatio`：GC 时间占比，影响吞吐量（如 19 表示 GC 占 5%）。
-  - `-XX:+UseStringDeduplication`：字符串去重，减少内存占用（JDK 8u20+）。
-- **操作**：
-  - 监控 GC 日志，分析 Minor GC 和 Full GC 频率。
-  - 减少大对象分配，避免直接进入老年代。
-  - 调整 `-XX:MaxTenuringThreshold`（如 15），控制对象晋升老年代的年龄。
-- **示例**：
-  ```bash
-  java -XX:+UseG1GC -XX:MaxGCPauseMillis=200 -XX:MaxTenuringThreshold=15 -jar app.jar
-  ```
+Java 虚拟机栈存储方法调用和局部变量。每个方法调用创建一个栈帧（Stack Frame），栈帧包含：局部变量表（Local Variable Table）、操作数栈（Operand Stack）、动态链接（Dynamic Linking）、返回地址（Return Address）。Java 虚拟机栈是线程私有的。
 
-#### 4. 处理元空间（Metaspace）
-- **问题**：元空间过小可能导致 `OutOfMemoryError: Metaspace`。
-- **参数**：
-  - `-XX:MetaspaceSize`：初始元空间大小。
-  - `-XX:MaxMetaspaceSize`：最大元空间大小，建议设置上限（如 512m）。
-- **操作**：
-  - 动态加载类较多的系统（如 Spring Boot），设置 `-XX:MaxMetaspaceSize=512m`。
-  - 监控类加载数量，减少不必要的动态代理或反射。
-- **示例**：
-  ```bash
-  java -XX:MetaspaceSize=256m -XX:MaxMetaspaceSize=512m -jar app.jar
-  ```
+栈帧的大小在编译时确定，动态大小会导致 StackOverflowError（栈溢出）。-Xss 参数调整栈大小。
 
-#### 5. 优化直接内存
-- **问题**：NIO 或 Netty 使用直接内存，过大可能导致 OOM。
-- **参数**：
-  - `-XX:MaxDirectMemorySize`：限制直接内存大小（如 1g）。
-- **操作**：
-  - 监控直接内存使用（如 `sun.nio.ch.DirectBuffer`）。
-  - 优化 NIO 代码，及时释放 ByteBuffer。
-- **示例**：
-  ```bash
-  java -XX:MaxDirectMemorySize=1g -jar app.jar
-  ```
+### 本地方法栈（Native Method Stack）
 
-#### 6. 分析和监控
-- **工具**：
-  - **jstat**：查看 GC 频率、堆使用情况。
-    ```bash
-    jstat -gcutil <pid> 1000
-    ```
-  - **jmap**：生成堆转储，分析内存占用。
-    ```bash
-    jmap -dump:live,format=b,file=heap.hprof <pid>
-    ```
-  - **jvisualvm/jconsole**：可视化监控 GC、内存、线程。
-  - **Arthas**：在线诊断，查看对象、线程、GC 状态。
-  - **GC 日志**：启用 GC 日志分析。
-    ```bash
-    java -XX:+PrintGCDetails -XX:+PrintGCTimeStamps -Xloggc:gc.log -jar app.jar
-    ```
-- **操作**：
-  - 定期分析堆转储，查找内存泄漏（如 HashMap 未清理）。
-  - 监控 GC 停顿时间，调整参数优化吞吐量或延迟。
+本地方法栈为本地方法（native）服务，存储本地方法的调用和局部变量。本地方法栈是线程私有的。
 
-#### 7. 线程和锁优化
-- **问题**：线程过多导致上下文切换，或锁竞争导致性能下降。
-- **操作**：
-  - 调整线程池大小（如 Tomcat 的 `maxThreads` 或 Java 的 `ThreadPoolExecutor`）。
-  - 使用 `-XX:+UseBiasedLocking` 启用偏向锁，减少锁开销。
-  - 监控线程状态，排查死锁（使用 `jstack <pid>`）。
-- **示例**：
-  ```bash
-  java -XX:+UseBiasedLocking -jar app.jar
-  ```
+### 堆（Heap）
 
-#### 8. 项目特定调优
-- **高并发场景**：
-  - 增大新生代（`-Xmn`），减少 Minor GC。
-  - 使用 G1 收集器，设置 `-XX:MaxGCPauseMillis=100`。
-- **内存敏感场景**：
-  - 减少对象创建，使用对象池（如 Apache Commons Pool）。
-  - 启用字符串去重（`-XX:+UseStringDeduplication`）。
-- **低延迟场景**：
-  - 使用 ZGC（`-XX:+UseZGC`），设置小停顿时间。
+堆是 JVM 中最大的一块内存，存储对象实例。堆是所有线程共享的，GC 的主要区域。堆可以通过 -Xms（初始堆）、-Xmx（最大堆）调整大小。
 
----
+### 方法区（Method Area）
 
-### 四、调优流程
-1. **收集信息**：
-   - 监控系统指标：GC 频率、停顿时间、内存使用率、CPU 负载。
-   - 使用工具：jstat、jmap、Arthas、VisualVM。
-2. **分析瓶颈**：
-   - 频繁 Full GC：堆太小或内存泄漏。
-   - 高延迟：GC 停顿时间长或锁竞争。
-   - OOM：堆、元空间或直接内存溢出。
-3. **调整参数**：
-   - 根据瓶颈调整堆大小、GC 策略、线程池等。
-   - 小步调整，单次改动一个参数，观察效果。
-4. **验证效果**：
-   - 压测验证 TPS/QPS、响应时间。
-   - 分析 GC 日志，确保优化有效。
-5. **持续监控**：
-   - 部署后持续观察，结合 Prometheus、Grafana 等工具。
+方法区存储类信息、常量、静态变量、即时编译器编译后的代码。方法区是所有线程共享的。JDK 8 后，方法区称为元空间（Metaspace），使用本地内存，可以通过 -XX:MetaspaceSize、-XX:MaxMetaspaceSize 调整大小。
 
----
+## 对象创建与分配
 
-### 五、面试扩展问题
-1. **如何排查 OOM 问题？**
-   - 启用 GC 日志，分析堆使用。
-   - 使用 jmap 生成堆转储，MAT/Eclipse 分析大对象。
-   - 检查元空间、直接内存使用。
-2. **G1 和 CMS 的区别？**
-   - CMS：低停顿，分代收集，碎片多。
-   - G1：分区收集，适合大堆，自动调优。
-3. **项目中如何进行 JVM 调优？**
-   - 例：电商系统，频繁 Full GC，分析发现大对象过多，调整 `-Xmn` 增大新生代，使用 G1 收集器，减少停顿时间。
-4. **如何减少 GC 开销？**
-   - 优化代码：减少临时对象、避免大对象。
-   - 调整堆结构：增大新生代、优化 Survivor 比例。
+### 类加载检查
 
----
+虚拟机遇到 new 指令时，首先检查类是否已加载、解析、初始化。如果没有，先执行类加载。
 
-### 六、总结
-- **核心操作**：调整堆大小、选择垃圾收集器、优化 GC 频率、监控元空间和直接内存、使用工具分析。
-- **常用参数**：`-Xms`、`-Xmx`、`-XX:+UseG1GC`、`-XX:MaxGCPauseMillis`、`-XX:MaxMetaspaceSize`。
-- **工具**：jstat、jmap、VisualVM、Arthas、GC 日志。
-- **实践建议**：结合业务场景（如高并发、内存敏感），从小规模调整开始，压测验证，持续监控。
+### 分配内存
 
-如果你需要具体参数配置示例、GC 日志分析步骤、或某场景的调优案例（如 Redis + Spring Boot），请告诉我！
+类加载检查通过后，虚拟机为新生对象分配内存。分配方式：指针碰撞（Bump the Pointer，堆内存规整时）、空闲列表（Free List，堆内存不规整时）。
+
+TLAB（Thread Local Allocation Buffer，线程本地分配缓冲）：为了提高分配效率，每个线程在堆中分配一块私有内存，线程优先在 TLAB 中分配对象，TLAB 满了再从堆中分配新的 TLAB。
+
+### 初始化零值
+
+内存分配完成后，虚拟机将分配到的内存块初始化为零值（如 int 为 0，boolean 为 false）。这保证了对象的实例字段可以不赋值直接使用。
+
+### 设置对象头
+
+对象头（Object Header）包含：Mark Word（哈希码、锁状态、GC 年龄）、类型指针（指向类元数据）、数组长度（如果是数组）。Mark Word 的状态：无锁（hashcode + age）、偏向锁（thread ID + epoch + age）、轻量级锁（指向栈中 Lock Record 的指针）、重量级锁（指向堆中 Monitor 的指针）。
+
+### 执行 `<init>` 方法
+
+执行对象的构造函数（`<init>`），初始化对象的字段。
+
+## 对象的内存布局
+
+### 对象头
+
+对象头包含 Mark Word 和类型指针。Mark Word（32 位 JVM 占 4 字节，64 位 JVM 占 8 字节）：无锁（25 bit hashcode + 4 bit age + 1 bit biased + 2 bit lock_state）、偏向锁（54 bit thread ID + 2 bit epoch + 4 bit age + 1 bit biased + 1 bit lock_state）、轻量级锁（62 bit 指向 Lock Record 的指针 + 2 bit lock_state）、重量级锁（62 bit 指向 Monitor 的指针 + 2 bit lock_state）。
+
+### 实例数据
+
+实例数据是对象的字段，包括父类的字段。字段的存储顺序：longs/doubles、ints/floats、shorts/chars、bytes/booleans、oops（普通对象指针）。相同宽度的字段分配在一起，父类的字段在子类字段之前。
+
+### 对齐填充
+
+对齐填充不是必需的，用于保证对象大小是 8 字节的整数倍（64 位 JVM）。Hot JVM 要求对象起始地址是 8 字节的整数倍，提高内存访问效率。
+
+## 垃圾回收
+
+### 对象存活判定
+
+引用计数（Reference Counting）：对象被引用时计数 +1，引用失效时计数 -1，计数为 0 时可回收。引用计数的问题是循环引用（A 引用 B，B 引用 A，无法回收）。
+
+可达性分析（Reachability Analysis）：从 GC Roots 开始向下搜索，走过的路径称为引用链，如果一个对象到 GC Roots 没有任何引用链，则可回收。GC Roots 包括：栈中引用的对象、方法区静态属性引用的对象、方法区常量引用的对象、本地方法栈中引用的对象。
+
+### 引用类型
+
+强引用（Strong Reference）：普通的对象引用，只要强引用存在，GC 不会回收。软引用（SoftReference）：内存不足时回收，适合缓存。弱引用（WeakReference）：GC 时回收，适合缓存、映射。虚引用（PhantomReference）：无法通过虚引用获取对象，用于跟踪对象回收。
+
+### GC 算法
+
+标记清除（Mark-Sweep）：标记存活对象，清除未标记对象。优点：不需要额外空间。缺点：碎片化。
+
+标记整理（Mark-Compact）：标记存活对象，将存活对象移动到一端。优点：无碎片化。缺点：移动开销大。
+
+复制算法（Copying）：将存活对象复制到另一块内存，清空当前内存。优点：无碎片、效率高。缺点：内存利用率低（需要一块空闲内存）。
+
+分代收集（Generational Collection）：新生代用复制算法（存活对象少），老年代用标记清除或标记整理（存活对象多）。
+
+### GC 器
+
+Serial GC：单线程 GC，适合小内存、单核。新生代用复制算法，老年代用标记整理。
+
+Parallel GC：多线程 GC，适合多核、吞吐量优先。新生代用复制算法，老年代用标记整理。
+
+CMS（Concurrent Mark Sweep）：并发标记清除，低延迟。新生代用复制算法，老年代用标记清除（并发）。CMS 的问题：碎片化、CPU 敏感、浮动垃圾。
+
+G1（Garbage First）：分区 GC，将堆分成多个 Region，可预测停顿时间。新生代和老年代不再物理隔离，而是逻辑上的。G1 的优势：可预测停顿时间、无碎片化。G1 的代价：额外内存占用（Remembered Set）。
+
+ZGC：低延迟 GC，停顿时间 `< 10ms`。ZGC 的技术：染色指针（Colored Pointers，将元数据存储在指针中）、读屏障（Load Barrier，读取对象时检查）、并发整理（Concurrent Relocation）。
+
+## GC 调优
+
+### GC 日志
+
+JDK 9+：-Xlog:gc*:file=gc.log（GC 日志输出到文件）。JDK 8：-XX:+PrintGCDetails、-XX:+PrintGCDateStamps（打印 GC 详细信息和时间戳）。
+
+### GC 参数
+
+-Xms：初始堆大小。-Xmx：最大堆大小。-XX:NewRatio：新生代与老年代的比例（默认 2，新生代:老年代 = 1:2）。-XX:SurvivorRatio：Eden 与 Survivor 的比例（默认 8，Eden:Survivor:Survivor = 8:1:1）。-XX:MaxTenuringThreshold：对象晋升老年代的年龄阈值（默认 15）。-XX:ParallelGCThreads：并行 GC 的线程数。
+
+### GC 调优策略
+
+调整堆大小：-Xms = -Xmx（避免动态扩容）、堆大小 = (存活对象 × 3) / (1 - GC 时间占比)。
+
+调整新生代大小：新生代大一些，减少 Full GC。新生代太大，老年代太小，老年代容易满。
+
+选择合适的 GC 器：小内存（`<4GB`）用 Serial GC 或 Parallel GC，大内存（`>4GB`）用 G1 或 ZGC。低延迟用 G1 或 ZGC，高吞吐量用 Parallel GC。
+
+优化对象分配：减少对象创建（如用基本类型）、使用对象池（如 ThreadLocal）、避免大对象（直接进入老年代）。
+
+JVM 内存管理和 GC 是 Java 性能优化的核心。理解 JVM 的内存结构、GC 算法、GC 调优，有助于解决内存泄漏、GC 停顿、性能瓶颈。
